--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,14 @@ form {
   font-family: "Poppins", sans-serif;
   font-style: italic;
   box-shadow: 9px 9px 18px #8e838e, -9px -9px 18px #c0b1c0;
+  color: #6d6779;
 }
 footer {
   text-align: center;
   font-size: 13px;
   margin-top: 30px;
   font-family: "Poppins", sans-serif;
+  color: rgba(0, 0, 0, 0.642);
 }
 a {
   color: #756c89;
